Fix logging
